--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@web3-react/injected-connector": "^6.0.7",
         "@web3-react/walletconnect-connector": "6.2.4",
         "@web3-react/walletlink-connector": "^6.2.13",
+        "antd": "^4.20.0",
         "axios": "^0.26.1",
         "bootstrap": "^5.1.3",
         "classnames": "^2.3.1",
@@ -35,7 +36,6 @@
         "react-scripts": "4.0.3",
         "react-toastify": "^8.2.0",
         "sass": "^1.49.9",
-        
         "web-vitals": "^2.1.4",
         "web3": "^1.3.6"
     },
